# multi-layer-perceptron

./: .gitignore  Cargo.toml  README.md  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml  security-audit.yml
benches/: throughput.rs
examples/: basic_usage.rs
src/: lib.rs
tests/: integration.rs
